@@ -1,5 +1,5 @@
 ===========================================================================
-$NetBSD: MESSAGE,v 1.1.1.1 2004/12/29 12:58:26 jmmv Exp $
+$NetBSD: MESSAGE,v 1.1 2006/03/11 22:23:53 jmmv Exp $
 
 You might want to install the libgail-gnome package for better gnome
 accessibility support.
