@@ -4,4 +4,4 @@ is a library for creating graphical user interfaces for the X Window
 System.  See http://www.gtk.org/)
 
 This package provides Glade built with GTK2 support only.  If you want
-GNOME2 support, install the glade2-gnome package instead.
+GNOME2 support, install the glade-gnome package instead.
