@@ -1,8 +1,8 @@
-# $NetBSD: Makefile,v 1.39 2006/03/11 22:05:02 jmmv Exp $
+# $NetBSD: Makefile,v 1.53 2006/03/11 22:23:53 jmmv Exp $
 
 .include "Makefile.common"
 
-CONFLICTS+=		glade2-gnome-[0-9]*
+CONFLICTS+=		glade-gnome-[0-9]*
 
 CONFIGURE_ARGS+=	--disable-gnome
 CONFIGURE_ARGS+=	--disable-gnome-db
